Styled Almost there. Need to fix footer overflow.

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  font-size: smaller;
 }
 
 .header {
@@ -17,12 +18,13 @@ body {
 .footer {
   display: flex;
   justify-content: space-between;
-  padding: 15px;
+  padding: 0px;
+  
 background-color: #eeeeee;
 position:absolute;
 bottom: 0;
 width: 100%;
-margin: 0px, auto;
+
 }
 
 a:link, a:hover, a:visited, a:active {
@@ -33,25 +35,25 @@ a:link, a:hover, a:visited, a:active {
 .left-links {
   display: flex;
   justify-content: flex-start;
-  gap: 20px;
+  gap: 15px;
 }
 
 .right-links {
 display: flex;
-justify-content: flex-end;
-gap: 20px;
+justify-content: flex-start;
+gap: 15px;
 
 }
 
 .content {
   display: flex;
   justify-content: center;
-  align-content: center;
+  align-items: center;
   flex-wrap: wrap;
   flex-direction: column;
 }
 
-.imput, .buttons {
+.input, .buttons {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -72,6 +74,9 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
+  margin: 5px;
+  font-weight: 500;
   
 }
 
